erDiagram
    %% =========================================================================
    %% Tideline — Community-Based Ocean & Coastal Cleanup Management System
    %% ER diagram of the REAL schema, as built by the Flyway migrations in
    %% backend/src/main/resources/db/migration (V1–V10).
    %%
    %% Differences from docs/er-diagram.mmd (the design-phase diagram) are
    %% deliberate and explained in docs/database/README.md:
    %%   - roles are CITIZEN / DIVER / ORGANIZATION / AUTHORITY / ADMIN
    %%   - one users table instead of ISA subtype tables
    %%   - PROJECT_ALERT_RECIPIENT is folded into alerts (dispatch_id + response)
    %%   - REGISTRATION_VERIFICATION is covered by users.account_status
    %% =========================================================================

    %% ---------- People ----------
    users {
        bigint id PK
        varchar full_name
        varchar email UK
        varchar password_hash
        varchar phone
        varchar role "CITIZEN / DIVER / ORGANIZATION / AUTHORITY / ADMIN"
        varchar province "free text the API returns"
        bigint province_id FK "resolved region key"
        varchar city
        double latitude "alert radius maths"
        double longitude
        bit available_for_alerts
        bit suspended "current state; history in user_sanctions"
        varchar suspension_reason
        varchar account_status "PENDING_REVIEW / APPROVED / REJECTED"
        varchar account_review_note
        varchar organization_name "organisations and officials"
        varchar organization_type
        varchar avatar_stored_name
        varchar website_url
        datetime created_at
    }

    diver_profiles {
        bigint id PK
        bigint user_id FK,UK
        varchar certification_level
        int experience_years
        varchar equipment
        int completed_projects "REQ-53 participation record"
    }

    diver_preferred_regions {
        bigint diver_profile_id FK
        varchar region
    }

    account_documents {
        bigint id PK
        bigint user_id FK
        varchar original_name
        varchar stored_name UK
        varchar content_type
        bigint size_bytes "NF-24"
        datetime uploaded_at
    }

    account_review_actions {
        bigint id PK
        bigint user_id FK
        bigint reviewer_id FK
        varchar decision "APPROVED / REJECTED"
        varchar reason
        datetime created_at
    }

    user_sanctions {
        bigint id PK
        bigint user_id FK "sanctioned"
        bigint issued_by_id FK "administrator"
        varchar type "WARNING / RESTRICTION / REINSTATEMENT"
        varchar reason
        bigint related_report_id FK
        datetime created_at
    }

    password_reset_tokens {
        bigint id PK
        bigint user_id FK
        varchar token_hash UK "hash only, never the token"
        datetime expires_at
        datetime used_at
        datetime created_at
    }

    %% ---------- Regions (reference data, seeded by V3) ----------
    provinces {
        bigint id PK
        varchar name UK
        varchar code UK
        bit coastal
    }

    districts {
        bigint id PK
        bigint province_id FK
        varchar name UK
        bit coastal
    }

    %% ---------- Reporting and community verification ----------
    pollution_reports {
        bigint id PK
        varchar reference UK "SR-2481"
        varchar title
        varchar description
        varchar severity "LOW / MEDIUM / HIGH / CRITICAL"
        varchar status "PENDING / VERIFYING / VERIFIED / ESCALATED / APPROVED / REJECTED / CLEANED"
        varchar location_name
        varchar province
        bigint province_id FK
        bigint district_id FK
        double latitude
        double longitude
        bigint reporter_id FK
        int confirm_votes
        int dispute_votes
        int trust_percentage "REQ-18, verified at 75 percent"
        double alert_radius_km
        varchar admin_decision "latest; history in report_review_actions"
        varchar moderation_comment
        datetime admin_reviewed_at
        varchar authority_decision
        varchar authority_comment
        bigint authority_officer_id FK
        datetime incident_at "REQ-11 when it happened"
        bit hazardous "NF-9"
        varchar safety_note "NF-11, NF-14"
        bigint hazard_marked_by_id FK
        datetime hazard_marked_at
        datetime escalated_at
        datetime decided_at
        datetime verified_at
        datetime created_at "submission time"
        datetime updated_at
    }

    report_photos {
        bigint id PK
        bigint report_id FK
        varchar url
        varchar stored_name UK
        varchar content_type
        bigint size_bytes "NF-24"
        varchar caption
    }

    verification_votes {
        bigint id PK
        bigint report_id FK
        bigint voter_id FK
        bit confirmed "true = genuine"
        datetime created_at
    }

    report_comments {
        bigint id PK
        bigint report_id FK
        bigint author_id FK
        bigint parent_id FK "replies, one level deep"
        varchar body
        bit official "admin or authority"
        datetime created_at
    }

    comment_reactions {
        bigint id PK
        bigint comment_id FK
        bigint user_id FK
        varchar type "LIKE / HEART"
        datetime created_at
    }

    report_review_actions {
        bigint id PK
        bigint report_id FK
        bigint reviewer_id FK
        varchar stage "ADMIN / AUTHORITY"
        varchar decision "APPROVED / REJECTED / MORE_INFO_REQUESTED"
        varchar comment
        datetime created_at
    }

    info_requests {
        bigint id PK
        bigint report_id FK
        bigint requested_by_id FK
        varchar message
        varchar status "OPEN / ANSWERED"
        varchar response_text
        datetime created_at
        datetime responded_at
    }

    info_attachments {
        bigint id PK
        bigint request_id FK
        varchar stored_name UK
        varchar original_name
        varchar content_type
        bigint size_bytes
    }

    %% ---------- Cleanup projects ----------
    cleanup_projects {
        bigint id PK
        varchar reference UK "CP-118"
        varchar title
        varchar description
        bigint report_id FK "the report it came from"
        bigint owner_id FK "the reporter"
        varchar status "PLANNED / ACTIVE / COMPLETED"
        int completion_percentage
        varchar location_name
        varchar province
        bigint province_id FK
        double latitude
        double longitude
        double debris_removed_kg "REQ-48 recorded result"
        int volunteers_needed
        int divers_needed
        int minimum_participants "REQ-41 escalation target"
        datetime resources_finalized_at
        bigint resources_finalized_by_id FK
        datetime started_at
        datetime completed_at
        datetime created_at
    }

    project_equipment {
        bigint project_id FK
        int position PK
        varchar name
        int quantity
    }

    project_participants {
        bigint id PK
        bigint project_id FK
        bigint user_id FK
        varchar participant_role "VOLUNTEER / DIVER"
        int contribution_mark "owner rating 1-5"
        datetime joined_at
    }

    project_updates {
        bigint id PK
        bigint project_id FK
        bigint author_id FK
        varchar stage "BEFORE / DURING / AFTER"
        varchar note
        varchar image_url
        int completion_percentage
        datetime created_at
    }

    project_update_images {
        bigint id PK
        bigint update_id FK
        varchar url
        varchar stored_name UK
        varchar content_type
        bigint size_bytes
        int position
    }

    %% ---------- Alerts ----------
    alert_dispatches {
        bigint id PK
        bigint report_id FK
        bigint project_id FK
        double radius_km "5, then 10, then 25"
        int tier
        int recipients_notified
        bigint created_by_id FK
        datetime created_at
    }

    alerts {
        bigint id PK
        bigint recipient_id FK
        varchar type
        varchar title
        varchar body
        bigint report_id "plain column, no FK"
        bigint project_id "plain column, no FK"
        double radius_km
        bigint dispatch_id FK
        varchar response "ACCEPTED / DECLINED, REQ-40"
        datetime responded_at
        bit read_flag
        bit critical "needs the recipient to act"
        datetime created_at
    }

    %% ---------- Diver opportunities ----------
    opportunities {
        bigint id PK
        bigint organization_id FK
        varchar title
        varchar description
        varchar region
        varchar required_certification
        bit paid
        bit open
        datetime created_at
    }

    opportunity_applications {
        bigint id PK
        bigint opportunity_id FK
        bigint diver_id FK
        varchar status "PENDING / ACCEPTED / DECLINED"
        varchar message
        datetime created_at
    }

    %% ---------- Audit ----------
    audit_log {
        bigint id PK
        bigint actor_id FK "null once the actor is deleted"
        varchar action
        varchar entity_type
        bigint entity_id
        varchar summary
        datetime created_at
    }

    %% =========================================================================
    %% Relationships
    %% =========================================================================
    users ||--o| diver_profiles : "has"
    diver_profiles ||--o{ diver_preferred_regions : lists
    users ||--o{ account_documents : uploads
    users ||--o{ account_review_actions : "is reviewed by"
    users ||--o{ user_sanctions : "is sanctioned by"
    users ||--o{ password_reset_tokens : requests

    provinces ||--o{ districts : contains
    provinces ||--o{ users : "home region of"
    provinces ||--o{ pollution_reports : "region of"
    provinces ||--o{ cleanup_projects : "region of"
    districts ||--o{ pollution_reports : "district of"

    users ||--o{ pollution_reports : submits
    pollution_reports ||--o{ report_photos : "evidenced by"
    pollution_reports ||--o{ verification_votes : receives
    users ||--o{ verification_votes : casts
    pollution_reports ||--o{ report_comments : has
    users ||--o{ report_comments : writes
    report_comments ||--o{ comment_reactions : receives
    report_comments ||--o{ report_comments : "replied to by"
    pollution_reports ||--o{ report_review_actions : "reviewed in"
    users ||--o{ report_review_actions : decides
    pollution_reports ||--o{ info_requests : "queried by"
    info_requests ||--o{ info_attachments : "answered with"
    pollution_reports ||--o{ user_sanctions : "grounds for"

    pollution_reports ||--o| cleanup_projects : "promoted to"
    users ||--o{ cleanup_projects : owns
    cleanup_projects ||--o{ project_equipment : needs
    cleanup_projects ||--o{ project_participants : has
    users ||--o{ project_participants : joins
    cleanup_projects ||--o{ project_updates : "tracked by"
    project_updates ||--o{ project_update_images : "evidenced by"

    cleanup_projects ||--o{ alert_dispatches : "recruits through"
    pollution_reports ||--o{ alert_dispatches : "alerts through"
    alert_dispatches ||--o{ alerts : "delivered as"
    users ||--o{ alerts : receives

    users ||--o{ opportunities : posts
    opportunities ||--o{ opportunity_applications : receives
    users ||--o{ opportunity_applications : "applies with"

    users ||--o{ audit_log : "acts in"
